# SW_amr_emulator

./: CMakeLists.txt  README.md  main.cpp  octave-workspace  run.sh
amr_emulator_release/: run.sh
amr_emulator_release/config/: amr_params.yaml
amr_emulator_release/lib/: libpaho-mqtt3as.so.1  libpaho-mqttpp3.so.1
config/: amr_params.yaml
image/map/: 250806_test.pgm  blank_map_with_obstacle.yaml  map.yaml
src/: main.cpp
src/app/: amr_manager.cpp  amr_manager.h
src/domain/common/: node_edge_info.h
src/domain/models/acceleration/: acceleration_model.h  dd_acceleration_model.cpp  dd_acceleration_model.h  dd_acceleration_without_dynamics_model.cpp  dd_acceleration_without_dynamics_model.h  sd_acceleration_model.cpp  sd_acceleration_model.h
src/domain/models/battery/: battery_model.h  battery_model_simple.cpp  battery_model_simple.h
src/domain/models/dead_reckoning/: dead_reckoning_euler.cpp  dead_reckoning_euler.h  dead_reckoning_model_factory.cpp  dead_reckoning_model_factory.h  dead_reckoning_rk2.CPP  dead_reckoning_rk2.h  dead_reckoning_rk4.cpp  dead_reckoning_rk4.h  idead_reckoning.h  sd_dead_reckoning_euler.cpp  sd_dead_reckoning_euler.h
src/domain/models/install/: local_setup.sh  setup.sh
src/domain/models/log/: latest_build
src/domain/module/amr/: amr.cpp  amr.h  iamr.h
src/domain/module/localizer/: ilocalizer.h  localizer.cpp  localizer.h  sd_localizer.cpp  sd_localizer.h
src/domain/module/motor_controller/: imotor_controller.h  motor_controller.cpp  motor_controller.h  sd_motor_controller.cpp  sd_motor_controller.h
src/domain/module/navigator/: inavigation.h  navigation.cpp  navigation.h
src/domain/module/vcu/: ivcu.h  vcu.cpp  vcu.h
src/domain/protocols/: custom_tcp_protocol.cpp  custom_tcp_protocol.h  iprotocol.h  vda5050_protocol.cpp  vda5050_protocol.h
src/infrastructure/: itcp_server.h  tcp_server.cpp  tcp_server.h  yaml_config.cpp  yaml_config.h
src/presentation/: amr_server.cpp  amr_server.h
test/: CMakeLists.txt  acs_emulator.cpp  fms_pub.py  fms_sub.py  fms_test_client.cpp  fms_test_pub.cpp  test.m  test_fms.py  test_localizer.cpp  test_motor_controller copy.cpp  test_motor_controller.cpp
test/fms_mqtt_publish/: CMakeLists copy.txt  CMakeLists.txt  fms_mqtt_publish copy.cpp  fms_mqtt_publish.cpp  package.xml  test_fms_vda5050_client.cpp
test/fms_orders/: curve copy.json  curve8.json  curve_test1.json  curve_test2.json  curve_test3.json  curve_test4.json  curve_test5.json  curve_test6.json  curve_test7.json  order_0 copy.json  order_0.json  order_1 copy.json  order_1.json  rounded_square_100x100_initial_order.json
test/fms_test/: CMakeLists.txt
test/mqtt_dump/: dump.py  mqtt_dump.txt
test/ros2/fms_mqtt_publish/: CMakeLists.txt  fms_mqtt_publish.cpp  package.xml
test/tcp_test/: tcp_client.py  tcp_vda.cpp
