# file(GLOB TEST_SOURCES *.cpp)

# include_directories(../src 
# ../src/infrastructure 
# ../src/domain 
# ../src/domain/interface 
# ../src/domain/models 
# ../src/app 
# ../src/infrastructure 
# ../src/presentation 
# ../src/utils 
# ../third_party/yaml-cpp/include)
# add_executable(acs_emulator acs_emulator.cpp
#     ../src/infrastructure/yamlConfig.cpp
#     )
# # target_link_libraries(acs_emulator yaml-cpp ws2_32)
# target_link_libraries(acs_emulator yaml-cpp)

# add_executable(test_motor_controller 
#         test_motor_controller.cpp
#         ../src/domain/motorController.cpp
#         ../src/infrastructure/yamlConfig.cpp
#         ../src/domain/models/ddAccelerationModel.cpp)

# target_link_libraries(test_motor_controller yaml-cpp)

# add_executable(test_localizer 
#         test_localizer.cpp
#         ../src/domain/localizer.cpp)
