<?xml version="1.0"?>
<package format="3">
  <name>fms_mqtt_publish</name>
  <version>0.0.1</version>
  <description>MQTT/ROS2 bridge example</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>nlohmann_json3_dev</exec_depend>
</package>
